# ParticleHeight

./: README.md
ParticleHeight/: CMakeLists.txt
ParticleHeight/image/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
ParticleHeight/particle/: CMakeLists.txt  Particle.cpp  Particle.h  ParticleFinder.cpp  ParticleFinder.h  ParticleHeight.cpp  TransformMultiple.cpp  TransformMultiple.h  TransformSingle.cpp  TransformSingle.h
ParticleHeight/ray/: CMakeLists.txt  OpticalLayer.cpp  OpticalLayer.h  OpticalMedium.h  OpticalPattern.cpp  OpticalPattern.h  OpticalScene.cpp  OpticalScene.h  OpticalSphere.cpp  OpticalSphere.h  Ray.cpp  Ray.h
ParticleHeight/util/: CMakeLists.txt  Settings.cpp  Settings.h  vf3.h
data/simulation/: phi007_steady.csv
linking/: main.py
